@@ -4,14 +4,16 @@ Hash: SHA256
 AUX gnome-packagekit-3.1.90-tests.patch 946 SHA256 d3ab48c5bae468cdeb62ce50bf195c9fe617649dadeba9ab9cbb4c6c238a9fad SHA512 b92a71ad9e7f5ed7a374488263a0fcc7809cd5d9446cfe806d38490a38465e0e19d7cdb32a5fefc176e3d204656793299dabb300f94bf83343b49837a70a298e WHIRLPOOL e91e928b8e9f62a08a88e6b579a47051c4e3e209a1d61592b251ad80f3678d398f389c200481a413e6c732487e01bd35921585336bbd60406b01513ee651dce5
 DIST gnome-packagekit-3.6.1.tar.xz 4248264 SHA256 d1496f15cb8026b14ada76a0a36fc4b34c9cf875a1a102e3ef4b3b57ddb1a934 SHA512 359667123ecc3b47dea10baa48cc3c087a35f72e4b507b52d54809f56d89050ba72f356633b295c01d565ad0806e06742e503819de27e2522697742283725334 WHIRLPOOL 398504eb9a233b8274bbc36caee1951ef659453621e941f81eeaa15fda503dd3997a1ef4087ceda1b779c2d25c2710b34b6b52907ae6bd14c3af4926acec4aa3
 DIST gnome-packagekit-3.6.2.tar.xz 4292248 SHA256 2db1069324cb85d8704bd1ffbbea3c29d57ba7b0d710f45f6563fd963517ef40 SHA512 5306d596af0601c9530c9b254763a7b86c926f4bd5b537efccd61ce83fdf93c87bc3d7e95db96db75e06847a5de6b18523f4423e49a6dbe44a85280af40f4247 WHIRLPOOL 729b50816e61107a477b4e41850f91e9b3cced034c7e0854bf9106589f8b9759b52703e797304387ffe30e437c5bc92d274c6344656e9acd059cf37b57c1516b
+DIST gnome-packagekit-3.8.2.tar.xz 4329948 SHA256 f13481d477a47295fa204b73ae7590f61d5576a8c889e5644cee0bc1f5cf530c SHA512 4f1d3d2d488d6ba14775ba00a71e5db270e86e341506e18e1480a726b792834f7a3a87f398013be97c28f04f846e1b7bd3c1a0283a5c4cb28d6d1696055e42ff WHIRLPOOL 0183c75a34a133a9ffbb2db7f932dac19c52ed094542dde8ea9c5d12d686615b44946c348ea302c44cf91d2cd93aaa6be939e72e79dce7b461541bbe803151a6
 EBUILD gnome-packagekit-3.6.1-r1.ebuild 3511 SHA256 1a4706c9ef3c4ed608f9c8635deb28b66ec4e5f398780df6cf4d789160ed8296 SHA512 df008f8bbe375b24274a0169a40155a9c66d10c56a1f8b4e2c925ad173db7ca4ecfa5e2ef038b25db0412dc53ba9ce33e8dfc9c2beb52ca382b1488ca637e052 WHIRLPOOL c6b3d55d6651db2106d4d0f1c71654fcdc66203edf995c73f0f1f7c38e2000ceb1b9a144c508d114024ba755bb7364937d8d13fa5a79ede2d69c03f76d2dad24
 EBUILD gnome-packagekit-3.6.2.ebuild 3432 SHA256 72fb2121602be210f27f580cc6036db62fe223b95cb5495b45f52690056a16dc SHA512 7e1983de0102f26b72d1193a326fcea376a7073104419f465c2521038e61517723778dd4d6c13020ea84eef953466d690d02c3a9cb73c3b696bdd84a74688e8d WHIRLPOOL 0901a3d3da4f79151156d8e0ad8ef87632b695900f8ea1a40d942810c4ba9fe280eb462a3bc4f6c035457b1b4bcf52d1e36eababc3121f55f985a54b1fbe642b
-MISC ChangeLog 2293 SHA256 70f3b1f91b748c69782cf72c80d77db7c951076d462859d7f4c4c77c24fb8b22 SHA512 571c0884026c750d21d54eefa89cc46457693c4c617220c40cac90fa775235348a044ff57b09f9618a643c02d2f9aa9d61902d6c8a774b76411b17c6278bcc0b WHIRLPOOL 0df2cbc8fd234f49306d033a376b1d4de1a4f1acf3bf4221a54d213d2464f3d3fd1dee9ae7a69be1d05d2abc4253d3d4e8dff708a2fa4f68eec435a0b3936102
+EBUILD gnome-packagekit-3.8.2.ebuild 3480 SHA256 1acbdd27d99efefd147e86662088840a57eb4ff14ddb840200712c63bfc7d23a SHA512 0f4171b3334ef2ec5422838adf86ecdc0fb924711b3773b7520e4cd9badc8d80e2dbfae1e5aefbe53d5644d91637a2d62686ccdab12e7ebb8405863016364e31 WHIRLPOOL 062d52008217b1c5a0d922046b072a92bfc6b2d77565f207f0bc1e57346cdffba153cafb815ef58eec67386699f493dae4720163e2b574d66b4e7911b5a6b0b4
+MISC ChangeLog 2450 SHA256 d684946daf3b659e5a2deb5d3a732d80f010f6cb01e665aeb55439caf5c7f547 SHA512 b180d9554dd9591ef8325875422cd4b83c3ef3216a77a383c9990d43408476a1978c56c39bee75a009ca51883bac1d4ac15f8a81c365b5a8dc99530c6fafbb9f WHIRLPOOL 33ee0bf5b01f4c69b85fe975c9dfa6556f7984005c18dae070b8418db9385ef663c25678ed7a15cbbf979be6b476010967c90db2b1fe079623f42f2c06e2df03
 MISC metadata.xml 299 SHA256 ecf78cbcb3f4b5087662db027c7eff16dd871674a6af4b31b978562b8168e876 SHA512 1f6b376546972763f6549a3d55b4f23edf9b3cf7231883e6f8efe6d6f8f789448a24f3f93d3a2c3d427ed747c0f03ce91cc0b94016bcb0008140d3ec9556d30d WHIRLPOOL f6c087ab612efe684060a454ae332ae19ae801a7178a63a884e354ca190b57d1ceabc181f3b7a05355b141af19199564199ae06d42178fc356c235e3966fdea7
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.21 (GNU/Linux)
 
-iEYEAREIAAYFAlFXXrsACgkQ1fmVwcYIWAYYygCgnTtMlDZ3Bvp/J8UP7E89bs4W
-BogAoIiBsza9u01YYjMPBlnK67FA0A6X
-=rHxa
+iEYEAREIAAYFAlIahXMACgkQ1fmVwcYIWAbj6ACgpELe6hWYMI7Qefu2DmzYE/EP
+9hMAnRba71xahkMfecRMCt9hQ1Z6NcL8
+=ZLeX
 -----END PGP SIGNATURE-----
