@@ -1,6 +1,12 @@
 # ChangeLog for gnome-extra/gnome-packagekit
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gnome-packagekit/ChangeLog,v 1.11 2013/03/30 21:52:58 eva Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gnome-packagekit/ChangeLog,v 1.12 2013/08/25 22:30:10 eva Exp $
+
+*gnome-packagekit-3.8.2 (25 Aug 2013)
+
+  25 Aug 2013; Gilles Dartiguelongue <eva@gentoo.org>
+  +gnome-packagekit-3.8.2.ebuild:
+  Version bump, bug #481902.
 
 *gnome-packagekit-3.6.2 (30 Mar 2013)
 
